5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4445/executions/1596_2895.log
== SUBMITION (2019-04-02 17:44:35) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input('digite o valor unitario:"))
valor_frete=float(input("digite i valor do frete:"))
total+(qtd_de_jogos*valor_unit)+valor_frete
print(total)							  
-- EXECUTION TIME:
0.152525
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valor_unit=float(input('digite o valor unitario:"))
                                                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:44:46) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input('digite o valor unitario:"))
valor_frete=float(input("digite i valor do frete:"))
total=(qtd_de_jogos*valor_unit)+valor_frete
print(total)							  
-- EXECUTION TIME:
0.164052
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valor_unit=float(input('digite o valor unitario:"))
                                                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:00) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input('digite o valor unitario:"))
valor_frete=float(input("digite o valor do frete:"))
total=(qtd_de_jogos*valor_unit)+valor_frete
print(total)							  
-- ERROR:
File "XXXX", line 2
    valor_unit=float(input('digite o valor unitario:"))
                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:44) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input('digite o valor unitario:"))
valor_frete=float(input("digite o valor do frete:"))
total=(qtd_de_jogos*valor_unit)+valor_frete
print(total)							  
-- ERROR:
File "XXXX", line 2
    valor_unit=float(input('digite o valor unitario:"))
                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:45:47) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input('digite o valor unitario:"))
valor_frete=float(input("digite o valor do frete:"))
total=(qtd_de_jogos*valor_unit)+valor_frete
print(total)							  
-- EXECUTION TIME:
0.185382
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valor_unit=float(input('digite o valor unitario:"))
                                                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:58:44) 
-- CODE:
var1=float(input("quantidade"))
var2=float(input("valor unitario"))
var3=float(input("valor do frete"))
total= var1 * var2 + var3
print(total)							  
-- EXECUTION TIME:
0.164252
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
